force-app/main/default/objects/Candidate_Profile__c/fields/Blacklist_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Blacklist_Keywords__c</fullName>
    <label>Blacklist Keywords</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>