force-app/main/default/objects/Candidate_Profile__c/fields/CV_Text__c.field-meta.xml
<CustomField>
    <fullName>CV_Text__c</fullName>
    <label>CV Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>