force-app/main/default/objects/Candidate_Profile__c/fields/Is_Active_Profile__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Profile</label>
    <type>Checkbox</type>
</CustomField>