force-app/main/default/objects/Candidate_Profile__c/fields/Negative_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Negative_Keywords__c</fullName>
    <label>Negative Keywords</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>