force-app/main/default/objects/Candidate_Profile__c/fields/Target_Titles__c.field-meta.xml
<CustomField>
    <fullName>Target_Titles__c</fullName>
    <label>Target Titles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>